# aetheric-engine

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: engine.rs  lib.rs  prelude.rs
src/core/: global_resources.rs  mod.rs  world_resources.rs
src/core/globals/: global_context.rs  global_systems.rs  mod.rs
src/core/input/: action.rs  action_mapper.rs  event.rs  input_manager.rs  input_state.rs  mod.rs  state_tracker.rs
src/core/message_bus/: message_queue.rs  messgae_bus.rs  mod.rs
src/core/platform_bridge/: event_collector.rs  interface.rs  mod.rs
src/core/scene/: manager.rs  mod.rs  scene_manager.rs  transition_queue.rs
src/engine/: event.rs  mod.rs
src/platform/: event_mapper.rs  input_buffer.rs  input_processor.rs  mod.rs
