[package]
name = "aetheric_engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A multithreaded game engine with deterministic simulation and clean platform abstraction"
repository = "https://github.com/tungsten-protocol/aetheric-engine"
authors = ["Hari Seldon <tungsten.protocol@gmail.com>"]

[dependencies]
winit = "0.30"
log = "0.4.28"
crossbeam-channel = "0.5"